import React, {Component} from 'react';

class Header extends Component {
    render() {
        return (
            <div className="Header">
                <h1>The Audio Machine</h1>
            </div>
        );
    }
}

export default Header;