import React, {Component} from 'react';

class Library extends Component {
    render() {
        return (
            <div className="Library">
                This is going to be the Library
            </div>
        );
    }
}

export default Library;